--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -1,1 +1,19 @@
+---
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
+const { title } = Astro.props
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+---
 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+	</head>
+	<body>
+		<Header title={SITE_TITLE} />
+		<main>
+			
+		</main>
+	</body>
+</html>
