--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -2,16 +2,15 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 const { title } = Astro.props
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+	<head><title>{ title }</title>
+		<BaseHead />
 	</head>
 	<body>
-		<Header title={SITE_TITLE} />
+		<Header />
 		<main>
 			
 		</main>
