--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -6,7 +6,7 @@ const { title } = Astro.props
 
 <!DOCTYPE html>
 <html lang="en">
-	<head><title>{ title }</title>
+	<head>
 		<BaseHead />
 	</head>
 	<body>
