--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -1,18 +1,23 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
 const { title } = Astro.props
 ---
-
-<!DOCTYPE html>
+      
 <html lang="en">
-	<head>
-		<BaseHead />
-	</head>
-	<body>
-		<Header />
-		<main>
-			
-		</main>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <BaseHead title={title}/>
+  </head>
+  <body>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Posts</a>
+      <a href="#">Contact</a>
+    </nav>
+    <h1>{title}</h1>
+    <article>
+      <slot /> <!-- your content is injected here -->
+    </article>
+  </body>
 </html>
