--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -1,23 +1,21 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-const { title } = Astro.props
+import Header from '../components/Header.astro';
+// 1. The frontmatter prop gives access to frontmatter and other data
+const { frontmatter } = Astro.props;
 ---
-      
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <BaseHead title={title}/>
+    <BaseHead />
+    <!-- Add other Head elements here, like styles and meta tags. -->
+    <title>{frontmatter.title}</title>
   </head>
   <body>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Posts</a>
-      <a href="#">Contact</a>
-    </nav>
-    <h1>{title}</h1>
-    <article>
-      <slot /> <!-- your content is injected here -->
-    </article>
+    <Header />
+    <!-- Add other UI components here, like common headers and footers. -->
+    <!-- <h1>{frontmatter.title} by {frontmatter.author}</h1> -->
+    <!-- 2. Rendered HTML will be passed into the default slot. -->
+    <slot />
+    <!-- <p>Written on: {frontmatter.date}</p> -->
   </body>
-</html>
+</html>v
