--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -18,4 +18,4 @@ const { frontmatter } = Astro.props;
     <slot />
     <!-- <p>Written on: {frontmatter.date}</p> -->
   </body>
-</html>v
+</html>
