--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -8,7 +8,7 @@ const { frontmatter } = Astro.props;
   <head>
     <BaseHead />
     <!-- Add other Head elements here, like styles and meta tags. -->
-    <title>{frontmatter.title}</title>
+    <title>{title}</title>
   </head>
   <body>
     <Header />
